Tweaked table footer to fix alignment

--- a/pages/invoice/www/styles/table.css
+++ b/pages/invoice/www/styles/table.css
@@ -8,6 +8,9 @@ table {
 	text-align: right;
 	width: 5em;
 }
+.price-col {
+	width: 8em;
+}
 
 .delete-button-col {
 	width: 4em;
